--- a/zerops.yml
+++ b/zerops.yml
@@ -7,10 +7,9 @@ zerops:
       addToRunPrepare:
         - ./requirements.txt
     run:
+      os: ubuntu
       base: python@3.12
       prepareCommands:
-        - sudo apk update
-        - sudo apk add postgresql-dev
         - python3 -m pip install --ignore-installed -r requirements.txt
       start: python3 app.py
       ports:
